<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">我的主页</string>

    <string name="mynavigation">我的导航</string>

    <string name="getbackpass">找回密码</string>

    <string name="verify">验证</string>

    <string name="login_account_empty">请输入手机号</string>

    <string name="register_get_code">获取</string>
    <string name="register_again_code">重新获取</string>
    <string name="register_phone_empty">请输入手机号码</string>
    <string name="register_phone_right">请输入正确的手机号码</string>
    <string name="register_phone_exist">手机号已注册</string>
    <string name="login_password_empty">请输入密码</string>
    <string name="register_phone_hint">手机号</string>
    <string name="register_nickname">昵称</string>
    <string name="register_pass">密码</string>
    <string name="register_again_pass">确认密码</string>
    <string name="new_pass">新密码</string>
    <string name="confirm_new_pass">确认新密码</string>
    <string name="register_submit">提交</string>
    <string name="register_code_hint">短信验证码</string>
    <string name="forget_pass_new">新密码</string>
    <string name="forget_pass_again">确认新密码</string>
    <string name="forget_phone_submit">确认</string>

    <string name="please_input_title">请输入标题</string>
    <string name="please_input_url">请输入网址</string>

    <string name="crop__saving">保存图片…</string>
    <string name="crop__wait">请稍后…</string>
    <string name="crop__pick_error">No image sources available</string>

    <string name="crop__done">确认</string>
    <string name="crop__cancel">取消</string>

    <string name="upload_pic_ing">"上传自定义图片..."</string>
    <string name="upload_pic_suc">"图片上传成功"</string>
    <string name="upload_pic_fail">"图片上传失败"</string>


    <string name="set_theme_fail">设置皮肤失败</string>
    <string name="set_theme_suc">设置皮肤成功</string>


    <string name="exit_login_loading">操作中，请稍等...</string>


    <!-- 登录注册 -->
    <string name="please_wait">请稍后...</string>
    <string name="authorize">授权</string>
    <string name="authorize_success">授权成功</string>
    <string name="login_text">登录</string>
    <string name="login_account_hint">请输入手机号</string>
    <string name="login_pass_hint">密码</string>
    <string name="register_account">注册账号</string>
    <string name="remember_pass">记住密码</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="QQ_authorize">QQ授权登录</string>
    <string name="authorize_error">授权失败</string>
    <string name="authorize_cancel">取消授权</string>
    <string name="login_httping">登录中,请稍等...</string>
    <string name="login_suc">登录成功</string>
    <string name="login_fail">登录失败，请重新输入</string>
    <string name="login_auto_fail">自动登录失败</string>
    <string name="login_password_error">密码错误，请重新输入</string>
    <string name="login_account_no_exist">账号不存在，请重新输入</string>
    <string name="register_text">注册</string>
    <string name="register_phone">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="register_email_hint">邮箱</string>
    <string name="register_agreed">同意用户协议</string>
    <string name="register_email_empty">请输入邮箱</string>
    <string name="register_email_right">请输入正确的邮箱</string>
    <string name="register_email_exist">邮箱已注册</string>
    <string name="register_nickname_empty">请输入昵称</string>
    <string name="register_nickname_right">请输入正确的昵称，2-15个汉字或4-30个字符，不能包含特殊字符</string>
    <string name="register_nickname_exist">昵称已注册</string>
    <string name="register_code_empty">请输入验证码</string>
    <string name="register_code_right">请输入正确的验证码</string>
    <string name="register_code_suc">验证码下发中，请稍等...</string>
    <string name="register_code_fail">获取验证码失败，请重新获取</string>
    <string name="register_pass_empty">请输入密码</string>
    <string name="register_again_pass_empty">请输入确认密码</string>
    <string name="register_pass_right">密码长度6到20位的字母数据</string>
    <string name="register_pass_equals">两次密码不一样</string>
    <string name="register_look_agree">请查看，并同意用户协议</string>
    <string name="register_httping">注册中,请稍等...</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败，请重试...</string>
    <string name="phone_code_overdue">验证码过期，请重新获取.</string>
    <string name="forget_pass_phone">手机找回</string>
    <string name="forget_pass_email">邮箱找回</string>
    <string name="forget_email_submit">提交</string>
    <string name="forget_pass_httping">找回中,请稍等...</string>
    <string name="forget_pass_success">找回成功</string>
    <string name="forget_pass_fail">找回失败，请重试...</string>
    <string name="forget_email_no_exist">该邮箱没有注册</string>
    <string name="forget_phone_no_exist">该手机号码没有注册</string>
    <string name="forget_email_suc">操作成功，请进入邮箱设置密码</string>
    <string name="person_center_error">用户中心异常，1011</string>
    <string name="login_invalid">会话失效，需重新登录</string>
    <string name="account_qq_bound">该账户已绑定QQ，请用QQ登录</string>


    <string name="setting_error_net_str">网络连接错误，请检查您的网络或选择重试...</string>

    <string name="wifi_connect_hint">温馨提示</string>
    <string name="no_pic">选择图片不存在,请重新选择</string>
    <string name="already_upload_pic">选择图片已上传,请选择其他图片</string>
    <string name="no_downloaded_pic">选择图片不存在,请重新下载</string>
    <string name="diy">自定义</string>
    <string name="pic_cut_error">图片裁剪出错</string>
    <string name="no_login">未登录</string>
</resources>
